--- a/birthday-bot/package.json
+++ b/birthday-bot/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "node-cron": "^3.0.3",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.27.0"
+    "whatsapp-web.js": "^1.27.0",
+    "winston": "^3.17.0"
   }
 }
